--- a/html/patrones.html
+++ b/html/patrones.html
@@ -113,8 +113,7 @@
                 <div class="card-body">
                     <h2 class="card-title text-center">Plantas</h2>
                     <p class="card-text">
-                        Przemysław Prusinkiewicz avanzó la idea de considerar la sucesión de Fibonacci en la naturaleza
-                        como un grupo libre. Un modelo del patrón de distribución de las semillas del girasol
+                        Este emergente Ecomerce, esta dando mucho de que hablar, debido a que puedes, publicar tus servicios y a su vez consumirlos, su enfoque es el crecimiento personal
                     </p>
                     <a href="alternativas.html" class="btn btnpropio">Ver</a>
                 </div>
