--- a/html/alternativas.html
+++ b/html/alternativas.html
@@ -106,7 +106,7 @@
 
         <!-- Inicio video -->
         <div class="contenedorvideopinstructivo m-5  ">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/3oCC4NDgYrY"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/t_dntFmF7tM"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen>
